# myintegrationhub

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: cronjob.yml
_docs/: github_actions_cronjob.md  gsheets_auth.md  habitica_auth.md
app/gsheets/: _service.py  create_sheet.py
app/habitica/: __init__.py  _schema.py
sync-habitica-completed-task-with-google-sheets/: .env.example  .python-version  README.md  TODO.md  main.py
sync-habitica-completed-task-with-google-sheets/_docs/: gsheets_auth.md
sync-habitica-completed-task-with-google-sheets/app/: config.py
sync-habitica-completed-task-with-google-sheets/app/gsheets/: __init__.py  _get_sheet_id.py  append_sheet_data.py  get_sheet_first_row.py  get_sheet_last_row.py  has_sheet_header_row.py
sync-habitica-completed-task-with-google-sheets/app/habitica/: __init__.py  _habitica_http_client.py  get_tasks.py
